--- a/package.json
+++ b/package.json
@@ -4,7 +4,32 @@
   "description": "静的サイトテンプレート",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "minista",
+    "build": "minista build",
+    "preview": "minista preview",
+    "format": "prettier --check . --write"
+  },
+  "prettier": {
+    "semi": false
+  },
+  "browserslist": [
+    "last 1 Chrome versions",
+    "last 1 Edge versions",
+    "last 1 Firefox versions",
+    "last 1 Safari versions",
+    "last 1 iOS versions",
+    "last 1 ChromeAndroid versions"
+  ],
+  "devDependencies": {
+    "@types/node": "^18.0.3",
+    "@types/prettier": "^2.6.3",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.16",
+    "minista": "^2.8.2",
+    "prettier": "^2.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.7.4"
   },
   "license": "MIT",
   "volta": {
