--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
       "@src/*": ["src/*"]
     }
   },
-  "include": ["./minista.config.ts", "src"]
+  "include": ["./minista.config.ts", "src", "global.d.ts"]
 }
