--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/prettier": "^2.6.3",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
+    "@types/sharp": "^0.30.4",
     "autoprefixer": "^10.4.7",
     "chokidar": "^3.5.3",
     "glop": "^0.3.1",
@@ -45,6 +46,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.53.0",
+    "sharp": "^0.30.7",
     "tailwindcss": "^3.1.4",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
