--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "last 1 ChromeAndroid versions"
   ],
   "devDependencies": {
-    "@types/glob": "^7.2.0",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.0.3",
     "@types/prettier": "^2.6.3",
@@ -37,6 +36,7 @@
     "autoprefixer": "^10.4.7",
     "chokidar": "^3.5.3",
     "glop": "^0.3.1",
+    "image-size": "^1.0.1",
     "minimist": "^1.2.6",
     "minista": "^2.8.2",
     "next": "^12.2.0",
