🔧 devしたときに初回も画像を圧縮するように

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_ENV=development run-p dev:*",
     "dev:minista": "minista --host --open",
     "dev:path": "pathpida --ignorePath .gitignore --output src/lib/pathpida --watch",
-    "dev:image": "image-optimizer --watch",
+    "dev:image": "run-s build:image watch:image",
+    "watch:image": "image-optimizer --watch",
     "build": "NODE_ENV=production run-s build:path build:image build:minista",
     "build:minista": "minista build",
     "build:path": "pathpida --ignorePath .gitignore --output src/lib/pathpida",
